test/files/neg/macro-exception/Macros_1.scala
import scala.language.experimental.macros
import scala.reflect.macros.BlackboxContext

object Macros {
  def impl(c: BlackboxContext) = {
    throw new Exception()
  }
  def exception = macro impl
}